--- a/TrainingAPI/src/main/resources/hibernate.properties
+++ b/TrainingAPI/src/main/resources/hibernate.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/training
 spring.datasource.username=root
-spring.datasource.password=Atpt1313#
+spring.datasource.password=pswd
 spring.jpa.hibernate.ddl-auto=update
