--- a/TrainingAPI/src/main/resources/application.properties
+++ b/TrainingAPI/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-# DDL generation
-spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/training?useSSL=false
+spring.datasource.jdbcUrl=jdbc:mariadb://localhost:3306/training?useSSL=false
+spring.datasource.username=test
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+logging.level.org.hibernate.SQL=warn
