--- a/TrainingAPI/pom.xml
+++ b/TrainingAPI/pom.xml
@@ -36,6 +36,13 @@
       <artifactId>mariadb-java-client</artifactId>
       <version>3.0.6</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.0.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>TrainingAPI</finalName>
