--- a/TrainingAPI/pom.xml
+++ b/TrainingAPI/pom.xml
@@ -43,6 +43,12 @@
       <version>5.0.0</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-junit-jupiter</artifactId>
+          <version>3.1.0</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
   <build>
     <finalName>TrainingAPI</finalName>
