--- a/TrainingAPI/pom.xml
+++ b/TrainingAPI/pom.xml
@@ -57,6 +57,19 @@
           <version>3.1.0</version>
           <scope>test</scope>
       </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+      <version>3.0.4</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+      <version>3.0.4</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>TrainingAPI</finalName>
