--- a/TrainingAPI/src/main/resources/application.properties
+++ b/TrainingAPI/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 logging.level.org.hibernate.SQL=warn
+spring.security.user.password=Test12345!
