--- a/TrainingAPI/pom.xml
+++ b/TrainingAPI/pom.xml
@@ -76,6 +76,12 @@
       <version>1.18.26</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-resource-server -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+      <version>3.0.5</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>TrainingAPI</finalName>
