Added paths to keys to config

--- a/TrainingAPI/src/main/resources/application.properties
+++ b/TrainingAPI/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 logging.level.org.hibernate.SQL=warn
 spring.security.user.password=Test12345!
+jwt.private.key=classpath:rsa.private.key
+jwt.public.key=classpath:rsa.public.key
